Prevent word-wrapping on invite button

--- a/app/app/styles/_profileCommon.scss
+++ b/app/app/styles/_profileCommon.scss
@@ -60,6 +60,7 @@ $medium-avatar-size: 80px;
                 margin-right:1rem;
                 &.invite-button {
                     @extend .blue-color;
+                    white-space:nowrap;
                 }
                 .fa {
                     display:inline-block;
